notify-me: add progress update created notification (#336)
* add progress update type

* add progress update trigger

* handle notification
