# apps/users/_types/notify-me.types.ts
@@ -1,5 +1,11 @@
 import { InnovationSupportStatusEnum } from '@users/shared/enums';
-import type { EventType, ExcludeEnum, SubscriptionType, SupportUpdateCreated } from '@users/shared/types';
+import type {
+  EventType,
+  ExcludeEnum,
+  ProgressUpdateCreated,
+  SubscriptionType,
+  SupportUpdateCreated
+} from '@users/shared/types';
 import Joi from 'joi';
 
 //#region CreateDTO
@@ -19,10 +25,32 @@ const SupportUpdateCreatedSchema = Joi.object<SupportUpdateCreated>({
   }).required()
 }).required();
 
-export const NotifyMeConfigSchema = Joi.alternatives(SupportUpdateCreatedSchema);
+const ProgressUpdateCreatedSchema = Joi.object<ProgressUpdateCreated>({
+  eventType: Joi.string().valid('PROGRESS_UPDATE_CREATED').required(),
+  subscriptionType: Joi.string().valid('INSTANTLY').default('INSTANTLY'),
+  preConditions: Joi.object({
+    units: Joi.array().items(Joi.string().uuid()).min(1).required()
+  }).required()
+}).required();
+
+export const NotifyMeConfigSchema = Joi.alternatives(
+  SupportUpdateCreatedSchema,
+  ProgressUpdateCreatedSchema
+).required();
 //#endregion
 
 //#region ResponseDTO
+type OrganisationWithUnits = {
+  id: string;
+  name: string;
+  acronym: string;
+  units: {
+    id: string;
+    name: string;
+    acronym: string;
+  }[];
+};
+
 export type DefaultResponseDTO = {
   id: string;
   updatedAt: Date;
@@ -34,22 +62,21 @@ export type SupportUpdateResponseDTO = {
   updatedAt: Date;
   eventType: 'SUPPORT_UPDATED';
   subscriptionType: 'INSTANTLY';
-  organisations: {
-    id: string;
-    name: string;
-    acronym: string;
-    units: {
-      id: string;
-      name: string;
-      acronym: string;
-    }[];
-  }[];
+  organisations: OrganisationWithUnits[];
   status: ExcludeEnum<InnovationSupportStatusEnum, InnovationSupportStatusEnum.UNASSIGNED>[];
+};
+
+export type ProgressUpdateCreatedResponseDTO = {
+  id: string;
+  updatedAt: Date;
+  eventType: 'PROGRESS_UPDATE_CREATED';
+  subscriptionType: 'INSTANTLY';
+  organisations: OrganisationWithUnits[];
 };
 
 export type SupportUpdateResponseTypes = {
   SUPPORT_UPDATED: SupportUpdateResponseDTO;
-  PROGRESS_UPDATE_CREATED: DefaultResponseDTO;
+  PROGRESS_UPDATE_CREATED: ProgressUpdateCreatedResponseDTO;
   REMINDER: DefaultResponseDTO;
 };
 
