# libs/shared/types/notify-me.types.ts
@@ -27,16 +27,30 @@ export type SupportUpdateCreated = {
   };
 };
 
+export type ProgressUpdateCreated = {
+  eventType: 'PROGRESS_UPDATE_CREATED';
+  subscriptionType: 'INSTANTLY';
+  preConditions: {
+    units: string[];
+  };
+};
+
 export type SubscriptionConfig =
   | SupportUpdateCreated
+  | ProgressUpdateCreated
   | {
-      eventType: Exclude<EventType, 'SUPPORT_UPDATED'>;
+      eventType: 'REMINDER';
       subscriptionType: SubscriptionType;
-      preConditions: any;
-      periodicity?: any;
       date: Date;
       customMessages?: any;
     }; // TODO
+
+export const isSupportUpdateCreated = (config: SubscriptionConfig): config is SupportUpdateCreated => {
+  return config.eventType === 'SUPPORT_UPDATED';
+};
+export const isProgressUpdateCreated = (config: SubscriptionConfig): config is ProgressUpdateCreated => {
+  return config.eventType === 'PROGRESS_UPDATE_CREATED';
+};
 
 /*
  * Event Types
@@ -50,8 +64,7 @@ export type EventPayloads = {
     units: string;
   };
   PROGRESS_UPDATE_CREATED: {
-    unitId: string;
-    description: string;
+    units: string;
   };
   REMINDER: Record<string, never>;
 };
